working on allowing users to manage posts permission from the web

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,11 @@
     <%= yield %>
 
     <footer>
+      <%= content_tag :p, "Logged in as: #{current_user.email}" if user_signed_in? %>
       <ul>
         <li><%= link_to 'Home', root_path %></li>
         <% if user_signed_in? %>
+        <li><%= link_to 'New Post', new_post_path %></li>
         <li><%= button_to 'Logout', destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li><%= link_to 'Sign in', new_user_session_path %></li>
