--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,5 +15,13 @@
  */
 
 footer {
-  margin-top: 100px;
+  margin-top: 90px;
+}
+
+ul li {
+  margin-bottom: 10px;
+}
+
+div#errors {
+  color: red;
 }
