--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,3 +3,4 @@
 <p><%= @post.body %></p>
 
 <p><%= link_to 'Edit', edit_post_path(@post) %></p>
+<p><%= button_to 'Delete', post_path(@post), method: :delete %></p>
